string result of formula is also valid, fdo#49052

Change-Id: I I0beb439381a0d01b27d219b148c47839055b6f62
(cherry picked from commit c0ca1ef1990226cd5d7af6c1f76872e9ad8711f2)

Signed-off-by: Eike Rathke <erack@redhat.com>

Backported to use the older void ScFormulaCell::GetString(String&)